backdrop filter chrome flickering fix

--- a/styles/Panels.module.scss
+++ b/styles/Panels.module.scss
@@ -133,7 +133,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        gap: 10px;
+        gap: 20px;
 
         &--text {
             font-family: 'JetBrains Mono', monospace;
