--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -40,10 +40,9 @@ nav {
   background-color: rgb(0, 0, 0);
 
   @supports ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
-    backdrop-filter: saturate(180%) blur(100px);
+    backdrop-filter: saturate(180%) blur(8px);
     -webkit-backdrop-filter: saturate(180%) blur(20px);
-
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.75);
   }
 
   height: variables.$nav-height;
